# Todo_MCP

./: Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
src/todo_server/: database.py  main.py  server.py
src/todo_server/data/: todos.json
src/todo_server/tools/: calendar_tools.py  email_tools.py  google_auth.py  helper.py
